# autotools_dzoban_zip

./: README.md
1_libjpeg_sample/: configure.ac
1_libjpeg_sample/example/: Makefile.am  cjpeg.c  djpeg.c
1_libjpeg_sample/src/: Makefile.am  jerror.c  rdgif.c
