# шлях до заголовкових файлів
AM_CPPFLAGS = -I$(top_srcdir)/library

# Статична бібліотека libmystring.a
lib_LIBRARIES = libmystring.a
libmystring_a_SOURCES =\
    cderror.h \
    jcmaster.c \
    jdcoefct.c \
    jdpostct.c \
    jinclude.h \
    rdcolmap.c \
    cdjpeg.h \
    jcomapi.c \
    jdcolor.c \
    jdsample.c \
    jmemansi.c \
    rdgif.c \
    jcapimin.c \
    jconfig.h \
    jdct.h \
    jdtrans.c \
    jmemmgr.c \
    rdppm.c \
    jcapistd.c \
    jcparam.c \
    jddctmgr.c \
    jerror.c \
    jmemsys.h \
    rdrle.c \
    jccoefct.c \
    jcphuff.c \
    jdhuff.c \
    jerror.h \
    jmorecfg.h \
    rdswitch.c \
    jccolor.c \
    jcprepct.c \
    jdhuff.h \
    jfdctflt.c \
    jpegint.h \
    rdtarga.c \
    jcdctmgr.c \
    jcsample.c \
    jdinput.c \
    jfdctfst.c \
    jpeglib.h \
    transupp.h \
    jchuff.c \
    jctrans.c \
    jdmainct.c \
    jfdctint.c \
    jquant1.c \
    wrbmp.c \
    jchuff.h \
    jdapimin.c \
    jdmarker.c \
    jidctflt.c \
    jquant2.c \
    wrgif.c \
    jcinit.c \
    jdapistd.c \
    jdmaster.c \
    jidctfst.c \
    jutils.c \
    wrppm.c \
    jcmainct.c \
    jdatadst.c \
    jdmerge.c \
    jidctint.c \
    jversion.h \
    wrrle.c \
    jcmarker.c \
    jdatasrc.c \
    jdphuff.c \
    jidctred.c \
    rdbmp.c \
    wrtarga.c


# Динамічна бібліотека libmystring.la
lib_LTLIBRARIES = libmystring.la
libmystring_la_SOURCES   = \
    cderror.h \
    jcmaster.c \
    jdcoefct.c \
    jdpostct.c \
    jinclude.h \
    rdcolmap.c \
    cdjpeg.h \
    jcomapi.c \
    jdcolor.c \
    jdsample.c \
    jmemansi.c \
    rdgif.c \
    jcapimin.c \
    jconfig.h \
    jdct.h \
    jdtrans.c \
    jmemmgr.c \
    rdppm.c \
    jcapistd.c \
    jcparam.c \
    jddctmgr.c \
    jerror.c \
    jmemsys.h \
    rdrle.c \
    jccoefct.c \
    jcphuff.c \
    jdhuff.c \
    jerror.h \
    jmorecfg.h \
    rdswitch.c \
    jccolor.c \
    jcprepct.c \
    jdhuff.h \
    jfdctflt.c \
    jpegint.h \
    rdtarga.c \
    jcdctmgr.c \
    jcsample.c \
    jdinput.c \
    jfdctfst.c \
    jpeglib.h \
    transupp.h \
    jchuff.c \
    jctrans.c \
    jdmainct.c \
    jfdctint.c \
    jquant1.c \
    wrbmp.c \
    jchuff.h \
    jdapimin.c \
    jdmarker.c \
    jidctflt.c \
    jquant2.c \
    wrgif.c \
    jcinit.c \
    jdapistd.c \
    jdmaster.c \
    jidctfst.c \
    jutils.c \
    wrppm.c \
    jcmainct.c \
    jdatadst.c \
    jdmerge.c \
    jidctint.c \
    jversion.h \
    wrrle.c \
    jcmarker.c \
    jdatasrc.c \
    jdphuff.c \
    jidctred.c \
    rdbmp.c \
    wrtarga.c


#правила для динамічної бібліотеки
libmystring_la_LDFLAGS = -shared  
#libmystring_la_CXXFLAGS = -fPIC 
libmystring_la_CFLAGS = -fPIC
